fixed spacing error in title of inventoryDetails

--- a/client/src/components/inventoryDetails/inventoryDetails.scss
+++ b/client/src/components/inventoryDetails/inventoryDetails.scss
@@ -35,7 +35,7 @@
             }
 
             @include desktop() {
-                padding: 3rem 0rem 3rem 0rem;
+                padding: 3rem 0rem 0rem 0rem;
             }
 
 
